<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        
        <variable
            name="listener"
            type="com.woowa.banchan.ui.common.OnBackClickListener" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_surface">

        <com.woowa.banchan.ui.common.BanchanAppbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigation_icon="@drawable/ic_left_arrow"
            app:title="@string/cart_appbar_title"
            app:onNavigationClick="@{listener.navigateToMain}" />

        <ImageButton
            android:id="@+id/cb_total_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_checkbox"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/ll_cart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_total_check"
            android:contentDescription="@string/label_checkbox"/>

        <TextView
            android:id="@+id/tv_total_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/cart_deselect"
            app:layout_constraintTop_toTopOf="@id/cb_total_check"
            app:layout_constraintBottom_toBottomOf="@id/cb_total_check"
            app:layout_constraintStart_toEndOf="@id/cb_total_check" />

        <TextView
            android:id="@+id/tv_cart_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cart_delete"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/cb_total_check"
            app:layout_constraintBottom_toBottomOf="@id/cb_total_check"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/cb_total_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_cart_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_ordering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_cart_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_empty"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="100dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tv_recently"
            style="@style/Theme.Banchan.Subtitle1.CategoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_recently"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/ll_cart"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_recently_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_recently_all"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/tv_recently"
            app:layout_constraintBottom_toBottomOf="@id/tv_recently"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recently"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_recently"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>