<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cartItem"
            type="com.woowa.banchan.ui.cart.TestCartItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/cb_cart_item_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_margin="20dp"
            android:src="@drawable/ic_checkbox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/label_checkbox"/>

        <ImageView
            android:id="@+id/iv_cart_item_thumb"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:src="@{cartItem.thumb}"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="@id/cb_cart_item_check"
            app:layout_constraintStart_toEndOf="@id/cb_cart_item_check"
            android:contentDescription="@string/label_thumb"/>

        <TextView
            android:id="@+id/tv_cart_item_name"
            style="@style/Theme.Banchan.Subtitle2.CartItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{cartItem.name}"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/iv_cart_item_thumb"
            app:layout_constraintStart_toEndOf="@id/iv_cart_item_thumb"/>

        <TextView
            android:id="@+id/tv_cart_item_price"
            style="@style/Theme.Banchan.Subtitle2.CartItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{cartItem.price}"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_item_name"
            app:layout_constraintStart_toStartOf="@id/tv_cart_item_name"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_cart_item_name"
            app:layout_constraintBottom_toBottomOf="@id/iv_cart_item_thumb">

            <ImageButton
                android:id="@+id/btn_minus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:background="@drawable/btn_circle"
                android:contentDescription="@string/label_minus"
                android:elevation="6dp"
                android:src="@drawable/ic_minus_mini" />

            <EditText
                android:id="@+id/tv_quantity"
                style="@style/Theme.Banchan.Subtitle2.CartItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@{Integer.toString(cartItem.quantity)}"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                tools:text="1" />

            <ImageButton
                android:id="@+id/btn_plus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:background="@drawable/btn_circle"
                android:contentDescription="@string/label_plus"
                android:elevation="6dp"
                android:src="@drawable/ic_plus_mini" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageButton
            android:id="@+id/iv_cart_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@null"
            android:src="@drawable/ic_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/label_close"/>

        <TextView
            android:id="@+id/tv_total_price"
            style="@style/Theme.Banchan.Subtitle2.CartItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_cart_item_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            price="@{cartItem.price}"
            quantity="@{cartItem.quantity}"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_line"
            app:layout_constraintTop_toBottomOf="@id/tv_total_price"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>